# sci-fi-ui

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  env.example  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/handlers/: events.rs  file_system.rs  mod.rs  term.rs
src-tauri/src/handlers/ai/: ai.rs  audio.rs  mod.rs  text_ai.rs  urls.rs
src-tauri/src/handlers/config/: mod.rs  pollinations_ai.rs
src-tauri/src/utils/: http_client.rs  reqwest_client.rs
src/components/shared/: audio-generator.svelte  cpu-monitor.svelte  cpu-ram-monitor.svelte  file-explorer.svelte  keyboard.svelte  logo-ui.svelte  old.svelte  ping-monitor.svelte  process-monitor.svelte  ram-monitor.svelte  sci-fi-terminal-mini.svelte  start-dialog.svelte  terminal.svelte
src/components/shared/ai/: ai-button.svelte  ai-dialog.svelte
src/components/ui/: button.svelte
src/routes/: +page.svelte
