[package]
name = "sci-fi-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rizo_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version="1.46.1", features= ["full", "time"] }
portable-pty = "0.8.1"
sysinfo = "0.36.0"
reqwest = {version="0.12.22", features= ["json"] }
thiserror = "2.0.12"
urlencoding = "2.1.3"
dotenv = "0.15.0"
hound = "3.5.1"
minimp3 = "0.5.1"
rodio = "0.21.1"
once_cell = "1.21.3"
tauri-plugin-dialog = "2"
rubato = "0.16.2"
dasp = "0.11.0"
rand = "0.9.2"
tauri-plugin-store = "2"

